--- a/snu/palab/stm.html
+++ b/snu/palab/stm.html
@@ -15,6 +15,8 @@ Experiment 7. Scanning Tunneling Microscopy</p>
   <li>If you think this stuff is worth it, you can buy me a can of <a href="https://namu.wiki/w/%EB%8D%B0%EC%9E%90%EC%99%80"><i>TE</i>JAVA</a> in return.</li>
 </ol>
 
+<p>2018, Juno Nam</p>
+
 <input type="file" id="files" name="files[]" multiple />
 <output id="list"></output>
 </body>
@@ -25,23 +27,18 @@ Experiment 7. Scanning Tunneling Microscopy</p>
     var files = evt.target.files;
     var output = [];
     for (var i = 0, f; f = files[i]; i++) {
-
       var reader = new FileReader();
         reader.onload = (function(f) {
           return function(e) {
             var contents = e.target.result;
             var lines = contents.split('\n').map(l => l.trim().split(';')).slice(0, 2);
-            console.log(lines)
             var data = lines[0].map((_, i) => lines.map(r => r[i]).join(',')).join('\n')
-            console.log(data)
             document.getElementById('list').innerHTML += ['<p><a download="', f.name, 
               '" href="data:application/octet-stream,', data, '">', f.name, '</a></p>'].join('');
           }
         })(f);
-
       reader.readAsText(f);
     }
   }
-
   document.getElementById('files').addEventListener('change', handleFileSelect, false);
 </script>
