Update social media links on mobile view

--- a/index.html
+++ b/index.html
@@ -123,25 +123,25 @@
                             </div>
                         </a>
                         <span class="text-gray-400 dark:text-gray-500">|</span>
-                        <a href="#" class="text-indigo-600 dark:text-indigo-400 flex items-center">
+                        <a href="https://www.linkedin.com/in/junonam/" class="text-indigo-600 dark:text-indigo-400 flex items-center">
                             <i class="fab fa-linkedin mr-1"></i>
                             LinkedIn
                         </a>
                         <span class="text-gray-400 dark:text-gray-500">|</span>
-                        <a href="#" class="text-indigo-600 dark:text-indigo-400 flex items-center">
+                        <a href="https://scholar.google.com/citations?user=xY8pXzUAAAAJ&hl=en" class="text-indigo-600 dark:text-indigo-400 flex items-center">
                             <i class="fas fa-graduation-cap mr-1"></i>
                             Scholar
                         </a>
                         <span class="text-gray-400 dark:text-gray-500">|</span>
-                        <a href="#" class="text-indigo-600 dark:text-indigo-400 flex items-center">
-                            <i class="fas fa-file-pdf mr-1"></i>
-                            CV
-                        </a>
-                        <span class="text-gray-400 dark:text-gray-500">|</span>
-                        <a href="#" class="text-indigo-600 dark:text-indigo-400 flex items-center">
+                        <a href="https://github.com/recisic" class="text-indigo-600 dark:text-indigo-400 flex items-center">
                             <i class="fab fa-github mr-1"></i>
                             GitHub
                         </a>
+                        <!-- <span class="text-gray-400 dark:text-gray-500">|</span>
+                        <a href="#" class="text-indigo-600 dark:text-indigo-400 flex items-center">
+                            <i class="fas fa-file-pdf mr-1"></i>
+                            CV
+                        </a> -->
                     </div>
                 </div>
             </div>
