Add publication entry for WT-ASBS

--- a/index.html
+++ b/index.html
@@ -166,6 +166,29 @@
                         <div class="flex-1 p-4">
                             <div>
                                 <h3 class="text-base font-semibold text-gray-900 dark:text-gray-100 mb-2 leading-tight">
+                                    Enhancing Diffusion-Based Sampling with Molecular Collective Variables
+                                </h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300 mb-2 leading-tight">
+                                    <b>Juno Nam</b>, Bálint Máté, Artur P. Toshev, Manasa Kaniselvan, Rafael Gómez-Bombarelli, Ricky T. Q. Chen, Brandon Wood, Guan-Horng Liu, Benjamin Kurt Miller
+                                </p>
+                                <div class="flex items-center">
+                                    <a href="https://arxiv.org/abs/2510.11923" class="inline-flex items-center bg-indigo-50 dark:bg-indigo-900/20 px-2 py-1 rounded hover:bg-indigo-100 dark:hover:bg-indigo-900/30 transition-colors">
+                                        <i class="fas fa-file-alt text-indigo-400 mr-2"></i>
+                                        <span class="text-sm text-gray-600 dark:text-gray-300 leading-tight">arXiv preprint (2025)</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Publication Item -->
+                
+                <!-- Publication Item -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm overflow-hidden">
+                    <div class="flex flex-col md:flex-row">
+                        <div class="flex-1 p-4">
+                            <div>
+                                <h3 class="text-base font-semibold text-gray-900 dark:text-gray-100 mb-2 leading-tight">
                                     Flow Matching for Accelerated Simulation of Atomic Transport in Crystalline Materials
                                 </h3>
                                 <p class="text-sm text-gray-600 dark:text-gray-300 mb-2 leading-tight">
