Update publication link for LiFlow

--- a/index.html
+++ b/index.html
@@ -195,12 +195,9 @@
                                     <b>Juno Nam</b>, Sulin Liu, Gavin Winter, KyuJung Jun, Soojung Yang, Rafael Gómez-Bombarelli
                                 </p>
                                 <div class="flex items-center">
-                                    <a href="#" class="inline-flex items-center bg-indigo-50 dark:bg-indigo-900/20 px-2 py-1 rounded hover:bg-indigo-100 dark:hover:bg-indigo-900/30 transition-colors group relative">
+                                    <a href="https://www.nature.com/articles/s42256-025-01125-4" class="inline-flex items-center bg-indigo-50 dark:bg-indigo-900/20 px-2 py-1 rounded hover:bg-indigo-100 dark:hover:bg-indigo-900/30 transition-colors group relative">
                                         <i class="fas fa-book-open text-indigo-400 mr-2"></i>
                                         <span class="text-sm text-gray-600 dark:text-gray-300 leading-tight">Nature Machine Intelligence (2025)</span>
-                                        <div class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 px-2 py-1 bg-gray-800 dark:bg-gray-200 text-white dark:text-gray-800 text-xs rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">
-                                            In Press
-                                        </div>
                                     </a>
                                     <div class="flex space-x-2 items-center ml-4">
                                         <a href="https://arxiv.org/abs/2410.01464" class="text-indigo-500 dark:text-indigo-400 text-sm">Preprint</a>
