Update reaction path paper

--- a/index.html
+++ b/index.html
@@ -251,13 +251,17 @@
                                     <b>Juno Nam</b>, Miguel Steiner, Max Misterka, Soojung Yang, Avni Singhal, Rafael Gómez-Bombarelli
                                 </p>
                                 <div class="flex items-center">
-                                    <a href="https://arxiv.org/abs/2504.15370" class="inline-flex items-center bg-indigo-50 dark:bg-indigo-900/20 px-2 py-1 rounded hover:bg-indigo-100 dark:hover:bg-indigo-900/30 transition-colors">
+                                    
+                                    <a href="#" class="inline-flex items-center bg-indigo-50 dark:bg-indigo-900/20 px-2 py-1 rounded hover:bg-indigo-100 dark:hover:bg-indigo-900/30 transition-colors group relative">
                                         <i class="fas fa-file-alt text-indigo-400 mr-2"></i>
-                                        <span class="text-sm text-gray-600 dark:text-gray-300 leading-tight">arXiv preprint (2025)</span>
+                                        <span class="text-sm text-gray-600 dark:text-gray-300 leading-tight">Journal of Physical Chemistry Letters (2025)</span>
+                                        <div class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 px-2 py-1 bg-gray-800 dark:bg-gray-200 text-white dark:text-gray-800 text-xs rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">
+                                            In Press
+                                        </div>
                                     </a>
                                     <div class="flex space-x-2 items-center ml-4">
-                                        <!-- <a href="#" class="text-indigo-500 dark:text-indigo-400 text-sm">Preprint</a>
-                                        <span class="text-gray-400 dark:text-gray-500 text-xs">|</span> -->
+                                        <a href="https://arxiv.org/abs/2504.15370" class="text-indigo-500 dark:text-indigo-400 text-sm">Preprint</a>
+                                        <span class="text-gray-400 dark:text-gray-500 text-xs">|</span>
                                         <a href="https://github.com/learningmatter-mit/mepin" class="text-indigo-500 dark:text-indigo-400 text-sm">Code</a>
                                     </div>
                                 </div>
