Update WT-ASBS paper

--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
             <div class="hidden md:flex gap-8 items-start">
                 <div class="flex-1">
                     <h1 class="text-3xl font-bold text-gray-900 dark:text-gray-100 mb-2">Juno Nam</h1>
-                    <p class="text-base text-gray-600 dark:text-gray-300 mb-0 italic">PhD Candidate, MIT DMSE & CCSE</p>
-                    <p class="text-base text-gray-600 dark:text-gray-300 mb-4 italic">Part-Time Student Researcher, FAIR at Meta</p>
+                    <p class="text-base text-gray-600 dark:text-gray-300 mb-4 italic">PhD Candidate, MIT DMSE & CCSE</p>
                     <p class="text-base text-gray-600 dark:text-gray-300 mb-4">
-                        I am a third-year PhD student in MIT DMSE & CCSE, advised by Prof. Rafael Gómez-Bombarelli. I am also a research scientist intern on the FAIR Chemistry team at Meta.
+                        I am a third-year PhD student in MIT DMSE & CCSE, advised by <a href="https://gomezbombarelli.mit.edu" class="underline hover:text-indigo-600 dark:hover:text-indigo-400">Prof. Rafael Gómez-Bombarelli</a>. Previously, I was a research scientist intern on <a href="https://fair-chem.github.io" class="underline hover:text-indigo-600 dark:hover:text-indigo-400">FAIR Chemistry</a> team at Meta, working with <a href="https://neuralnetwork.fit" class="underline hover:text-indigo-600 dark:hover:text-indigo-400">Dr. Benjamin Miller</a>.
                     </p>
                     <p class="text-base text-gray-600 dark:text-gray-300 mb-4">
-                        I study how atoms move and rest, striving to turn their patterns into things built to last. Technically, I work on ML interatomic potentials, free energy methods, and generative modeling to understand and design molecules and materials.
+                        I study how atoms move and rest, striving to turn their patterns into things built to last. Technically, I work on ML interatomic potentials, free energy methods, and generative modeling and sampling to understand and design molecules and materials.
                     </p>
                     <div class="mb-6">
                         <div class="flex items-center space-x-4 text-sm">
@@ -173,9 +172,14 @@
                                 </p>
                                 <div class="flex items-center">
                                     <a href="https://arxiv.org/abs/2510.11923" class="inline-flex items-center bg-indigo-50 dark:bg-indigo-900/20 px-2 py-1 rounded hover:bg-indigo-100 dark:hover:bg-indigo-900/30 transition-colors">
-                                        <i class="fas fa-file-alt text-indigo-400 mr-2"></i>
-                                        <span class="text-sm text-gray-600 dark:text-gray-300 leading-tight">arXiv preprint (2025)</span>
+                                        <i class="fas fa-users text-indigo-400 mr-2"></i>
+                                        <span class="text-sm text-gray-600 dark:text-gray-300 leading-tight">International Conference on Learning Representations (2026)</span>
                                     </a>
+                                    <div class="flex space-x-2 items-center ml-4">
+                                        <a href="https://arxiv.org/abs/2510.11923" class="text-indigo-500 dark:text-indigo-400 text-sm">Preprint</a>
+                                        <span class="text-gray-400 dark:text-gray-500 text-xs">|</span>
+                                        <a href="https://github.com/facebookresearch/wt-asbs" class="text-indigo-500 dark:text-indigo-400 text-sm">Code</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
